--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
     git:
       url: git@github.com:ibrierley/flutter_map_dragmarker.git
   shared_preferences: ^2.0.13
+  socket_io_client: ^1.0.2
 
 dev_dependencies:
   flutter_test:
