--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   shared_preferences: ^2.0.13
   socket_io_client: ^2.0.0-beta.4-nullsafety.0
   fullscreen: ^1.0.3
+  image_picker: ^0.8.4+9
+  image_crop: ^0.4.0
 
 dev_dependencies:
   flutter_test:
