--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   image_crop: ^0.4.0
   qr_code_scanner: ^0.7.0
   qr_flutter: ^4.0.0
+  share_plus: ^3.1.0
 
 dev_dependencies:
   flutter_test:
