--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,9 +52,9 @@ dependencies:
   web_socket_channel: ^2.1.0
   flutter_image_compress: ^1.1.0
   path_provider: ^2.0.9
-  amplify_storage_s3: ^0.4.1
-  amplify_auth_cognito: ^0.4.1
-  amplify_flutter: ^0.4.1
+  settings_ui: ^2.0.2
+  permission_handler: ^9.2.0
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
