--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,10 +47,10 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>This app needs camera access to scan QR codes</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>This app needs location updates in background.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app needs location updates in background.</string>
+	<string>This app needs access to location when open.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app needs access to location when in the background.</string>
 
 </dict>
 </plist>
