--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   settings_ui: ^2.0.2
   permission_handler: ^9.2.0
   flutter_svg: ^1.0.3
+  geolocator: ^8.2.0
 
 dev_dependencies:
   flutter_test:
