--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: xcnav
-description: A new Flutter project.
+description: Cross Country Paramotor Navigation
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.1.0+1
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -48,7 +48,7 @@ dependencies:
   image_crop: ^0.4.0
   qr_code_scanner: ^0.7.0
   qr_flutter: ^4.0.0
-  share_plus: ^3.1.0
+  share_plus: ^4.0.3
   web_socket_channel: ^2.1.0
   flutter_image_compress: ^1.1.0
   path_provider: ^2.0.9
