--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   focus_detector: ^2.0.1
   file_picker: ^4.5.1
   xml: ^5.3.1
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
