--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   xml: ^5.3.1
   charts_flutter: ^0.12.0
   permission_handler: ^9.2.0
+  flutter_tts: ^3.3.3
 
 dev_dependencies:
   flutter_test:
