--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   charts_flutter: ^0.12.0
   permission_handler: ^9.2.0
   flutter_tts: ^3.3.3
+  flutter_barometer_plugin: ^0.0.1+3
+  scidart: ^0.0.2-dev.9
+  package_info_plus: ^1.4.2
 
 dev_dependencies:
   flutter_test:
