--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,9 @@ dependencies:
   charts_flutter: ^0.12.0
   permission_handler: ^9.2.0
   flutter_tts: ^3.3.3
-  flutter_barometer_plugin: ^0.0.1+3
+  flutter_barometer:
+    git:
+      url: git@github.com:eidolonFIRE/flutter_barometer.git
   package_info_plus: ^1.4.2
 
 dev_dependencies:
