--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
     git:
       url: git@github.com:eidolonFIRE/flutter_barometer.git
   package_info_plus: ^1.4.2
+  flutter_slidable: ^1.3.0
 
 dev_dependencies:
   flutter_test:
