--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
       url: git@github.com:eidolonFIRE/flutter_barometer.git
   package_info_plus: ^1.4.2
   flutter_slidable: ^1.3.0
+  network_info_plus: ^2.1.3
 
 dev_dependencies:
   flutter_test:
