--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   package_info_plus: ^1.4.2
   flutter_slidable: ^1.3.0
   network_info_plus: ^2.1.3
+  open_file: ^3.2.1
 
 dev_dependencies:
   flutter_test:
