--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.3+13
+version: 1.1.4+14
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -71,6 +71,7 @@ dependencies:
   flutter_slidable: ^1.3.0
   network_info_plus: ^2.1.3
   open_file: ^3.2.1
+  url_launcher: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -97,6 +98,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/external/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
