--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   network_info_plus: ^2.1.3
   open_file: ^3.2.1
   url_launcher: ^6.1.2
+  image: ^3.1.3
 
 dev_dependencies:
   flutter_test:
