--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ dependencies:
   open_file: ^3.2.1
   url_launcher: ^6.1.2
   image: ^3.1.3
+  email_validator: ^2.0.1
+  crypto: ^3.0.2
 
 dev_dependencies:
   flutter_test:
