--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   image: ^3.1.3
   email_validator: ^2.0.1
   crypto: ^3.0.2
+  usb_serial: ^0.4.0
 
 dev_dependencies:
   flutter_test:
