--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.2.4+21
+version: 1.3.4+22
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -37,18 +37,16 @@ dependencies:
   provider: any
   flutter_map: any
   wakelock: ^0.6.1+1
-
-  # flutter_map_dragmarker:
-  #   git:
-  #     url: git@github.com:ibrierley/flutter_map_dragmarker.git
+  http: any
+  intl: any
   flutter_map_line_editor:
     git:
-      url: git@github.com:ibrierley/flutter_map_line_editor.git
+      url: git@github.com:eidolonFIRE/flutter_map_line_editor.git
   shared_preferences: ^2.0.13
   fullscreen: ^1.0.3
   image_picker: ^0.8.4+9
   image_crop: ^0.4.0
-  qr_code_scanner: ^0.7.0
+  qr_code_scanner: ^1.0.0
   qr_flutter: ^4.0.0
   share_plus: ^4.0.3
   web_socket_channel: ^2.1.0
@@ -56,19 +54,19 @@ dependencies:
   path_provider: ^2.0.9
   settings_ui: ^2.0.2
   flutter_svg: ^1.0.3
-  geolocator: ^8.2.0
+  geolocator: ^9.0.1
   flutter_local_notifications: ^9.4.0
   focus_detector: ^2.0.1
   file_picker: ^4.5.1
-  xml: ^5.3.1
+  xml: ^6.1.0
   charts_flutter: ^0.12.0
-  permission_handler: ^9.2.0
+  permission_handler: ^10.0.0
   flutter_tts: ^3.3.3
   flutter_barometer:
     git:
       url: git@github.com:eidolonFIRE/flutter_barometer.git
   package_info_plus: ^1.4.2
-  flutter_slidable: ^1.3.0
+  flutter_slidable: ^2.0.0
   network_info_plus: ^2.1.3
   open_file: ^3.2.1
   url_launcher: ^6.1.2
@@ -76,6 +74,8 @@ dependencies:
   email_validator: ^2.0.1
   crypto: ^3.0.2
   usb_serial: ^0.4.0
+  latlong2: ^0.8.1
+  collection: ^1.16.0
 
 dev_dependencies:
   flutter_test:
@@ -86,7 +86,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
