--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-platform :ios, '12.0'
+platform :ios, '15.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -41,6 +41,7 @@ post_install do |installer|
 
     # Start of the permission_handler configuration
     target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
 
       # You can enable the permissions needed here. For example to enable camera
       # permission, just remove the `#` character in front so it looks like this:
@@ -62,7 +63,7 @@ post_install do |installer|
         # 'PERMISSION_CONTACTS=1',
 
         ## dart: PermissionGroup.camera
-        # 'PERMISSION_CAMERA=1',
+        'PERMISSION_CAMERA=1',
 
         ## dart: PermissionGroup.microphone
         # 'PERMISSION_MICROPHONE=1',
@@ -77,13 +78,13 @@ post_install do |installer|
         'PERMISSION_LOCATION=1',
 
         ## dart: PermissionGroup.notification
-        # 'PERMISSION_NOTIFICATIONS=1',
+        'PERMISSION_NOTIFICATIONS=1',
 
         ## dart: PermissionGroup.mediaLibrary
         # 'PERMISSION_MEDIA_LIBRARY=1',
 
         ## dart: PermissionGroup.sensors
-        # 'PERMISSION_SENSORS=1',   
+        'PERMISSION_SENSORS=1',   
 
         ## dart: PermissionGroup.bluetooth
         # 'PERMISSION_BLUETOOTH=1',
