--- a/ios/Podfile
+++ b/ios/Podfile
@@ -63,7 +63,7 @@ post_install do |installer|
         # 'PERMISSION_CONTACTS=1',
 
         ## dart: PermissionGroup.camera
-        'PERMISSION_CAMERA=1',
+        # 'PERMISSION_CAMERA=1',
 
         ## dart: PermissionGroup.microphone
         # 'PERMISSION_MICROPHONE=1',
@@ -78,13 +78,13 @@ post_install do |installer|
         'PERMISSION_LOCATION=1',
 
         ## dart: PermissionGroup.notification
-        'PERMISSION_NOTIFICATIONS=1',
+        # 'PERMISSION_NOTIFICATIONS=1',
 
         ## dart: PermissionGroup.mediaLibrary
         # 'PERMISSION_MEDIA_LIBRARY=1',
 
         ## dart: PermissionGroup.sensors
-        'PERMISSION_SENSORS=1',   
+        # 'PERMISSION_SENSORS=1',   
 
         ## dart: PermissionGroup.bluetooth
         # 'PERMISSION_BLUETOOTH=1',
