--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,9 +79,11 @@ dependencies:
   feature_discovery: ^0.14.1
   flutter_map_tile_caching: ^5.0.0-dev.6
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.3.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
