--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.3.11+31
+version: 1.3.13+33
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -79,9 +79,11 @@ dependencies:
   feature_discovery: ^0.14.1
   flutter_map_tile_caching: ^5.0.0-dev.6
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.3.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
