--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.3.20+40
+version: 1.3.21+41
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -68,7 +68,6 @@ dependencies:
   package_info_plus: ^1.4.2
   flutter_slidable: ^2.0.0
   network_info_plus: ^2.1.3
-  open_file: ^3.2.1
   url_launcher: ^6.1.2
   image: ^3.1.3
   email_validator: ^2.0.1
@@ -78,6 +77,7 @@ dependencies:
   collection: ^1.16.0
   feature_discovery: ^0.14.1
   flutter_map_tile_caching: ^5.0.0-dev.6
+  open_filex: ^3.4.0
 
 
 dev_dependencies:
