--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   flutter_map_tile_caching: ^5.0.0-dev.6
   open_filex: ^3.4.0
   dart_numerics: ^0.0.6
+  fuzzywuzzy: ^0.2.0
 
 
 dev_dependencies:
