--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.0+44
+version: 2.0.1+45
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -81,6 +81,7 @@ dependencies:
   fuzzywuzzy: ^0.2.0
   bisection: ^0.4.3+1
   positioned_tap_detector_2: ^1.0.4
+  flutter_speed_dial: ^6.2.0
 
 
 dev_dependencies:
