--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.0+43
+version: 2.0.1+45
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -57,7 +57,7 @@ dependencies:
   geolocator: ^9.0.1
   flutter_local_notifications: ^9.4.0
   focus_detector: ^2.0.1
-  file_picker: ^4.5.1
+  file_picker: ^5.2.2
   xml: ^6.1.0
   charts_flutter: ^0.12.0
   permission_handler: ^10.0.0
@@ -65,7 +65,7 @@ dependencies:
   flutter_barometer:
     git:
       url: git@github.com:eidolonFIRE/flutter_barometer.git
-  package_info_plus: ^1.4.2
+  package_info_plus: ^3.0.2
   flutter_slidable: ^2.0.0
   network_info_plus: ^2.1.3
   url_launcher: ^6.1.2
@@ -76,11 +76,12 @@ dependencies:
   latlong2: ^0.8.1
   collection: ^1.16.0
   flutter_map_tile_caching: ^5.0.0-dev.6
-  open_filex: ^3.4.0
+  open_filex: ^4.3.1
   dart_numerics: ^0.0.6
   fuzzywuzzy: ^0.2.0
   bisection: ^0.4.3+1
   positioned_tap_detector_2: ^1.0.4
+  flutter_speed_dial: ^6.2.0
 
 
 dev_dependencies:
