--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.1.4+51
+version: 2.2.0+52
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -39,23 +39,21 @@ dependencies:
   wakelock: ^0.6.1+1
   http: any
   intl: any
-  flutter_map_line_editor:
-    git:
-      url: git@github.com:eidolonFIRE/flutter_map_line_editor.git
+  flutter_map_line_editor: ^4.0.2
   shared_preferences: ^2.0.13
   fullscreen: ^1.0.3
   image_picker: ^0.8.4+9
   image_crop: ^0.4.0
   qr_code_scanner: ^1.0.0
   qr_flutter: ^4.0.0
-  share_plus: ^4.0.3
+  share_plus: ^6.3.0
   web_socket_channel: ^2.1.0
   flutter_image_compress: ^1.1.0
   path_provider: ^2.0.9
   settings_ui: ^2.0.2
   flutter_svg: ^1.0.3
   geolocator: ^9.0.1
-  flutter_local_notifications: ^9.4.0
+  flutter_local_notifications: ^12.0.4
   focus_detector: ^2.0.1
   file_picker: ^5.2.2
   xml: ^6.1.0
@@ -75,13 +73,14 @@ dependencies:
   usb_serial: ^0.4.0
   latlong2: ^0.8.1
   collection: ^1.16.0
-  flutter_map_tile_caching: ^5.0.0-dev.6
+  flutter_map_tile_caching: ^6.2.0
   open_filex: ^4.3.1
   dart_numerics: ^0.0.6
   fuzzywuzzy: ^0.2.0
   bisection: ^0.4.3+1
   positioned_tap_detector_2: ^1.0.4
   flutter_speed_dial: ^6.2.0
+  flutter_map_dragmarker: any
 
 
 dev_dependencies:
