--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: any
   provider: any
-  flutter_map: any
+  flutter_map: 3.0.0
   wakelock: ^0.6.1+1
   http: any
   intl: any
@@ -67,7 +67,6 @@ dependencies:
   flutter_slidable: ^2.0.0
   network_info_plus: ^3.0.1
   url_launcher: ^6.1.2
-  image: ^3.1.3
   email_validator: ^2.0.1
   crypto: ^3.0.2
   usb_serial: ^0.4.0
@@ -76,7 +75,7 @@ dependencies:
   flutter_map_tile_caching:
     git:
       url: git@github.com:eidolonFIRE/flutter_map_tile_caching.git
-  open_filex: ^4.3.1
+  better_open_file: any
   dart_numerics: ^0.0.6
   fuzzywuzzy: ^0.2.0
   bisection: ^0.4.3+1
@@ -96,7 +95,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.1
-  patrol: ^0.10.7
+  patrol: ^1.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
