--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   shared_preferences: ^2.0.13
   fullscreen: ^1.0.3
   image_picker: ^0.8.4+9
-  image_crop: ^0.4.0
+  custom_image_crop: any
   qr_code_scanner: ^1.0.0
   qr_flutter: ^4.0.0
   share_plus: ^6.3.0
@@ -82,6 +82,8 @@ dependencies:
   positioned_tap_detector_2: ^1.0.4
   flutter_speed_dial: ^6.2.0
   flutter_map_dragmarker: any
+  flutter_colorpicker: ^1.0.3
+  screenshot: ^1.3.0
 
 
 dev_dependencies:
