--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,6 @@ dependencies:
   focus_detector: ^2.0.1
   file_picker: ^5.2.2
   xml: ^6.1.0
-  charts_flutter: ^0.12.0
   permission_handler: ^10.0.0
   flutter_tts: ^3.6.3
   flutter_barometer:
@@ -84,6 +83,7 @@ dependencies:
   flutter_map_dragmarker: any
   flutter_colorpicker: ^1.0.3
   screenshot: ^1.3.0
+  fl_chart: ^0.61.0
 
 
 dev_dependencies:
