--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.2.15+70
+version: 2.3.0+72
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -84,6 +84,8 @@ dependencies:
   screenshot: ^1.3.0
   fl_chart: ^0.61.0
   datadog_flutter_plugin: ^1.3.2
+  flutter_native_splash: ^2.2.18
+
 
 
 dev_dependencies:
