--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.3.0+72
+version: 2.3.1+73
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -70,9 +70,6 @@ dependencies:
   usb_serial: ^0.4.0
   latlong2: ^0.8.1
   collection: ^1.16.0
-  flutter_map_tile_caching:
-    git:
-      url: git@github.com:eidolonFIRE/flutter_map_tile_caching.git
   better_open_file: any
   dart_numerics: ^0.0.6
   fuzzywuzzy: ^0.2.0
@@ -85,6 +82,7 @@ dependencies:
   fl_chart: ^0.61.0
   datadog_flutter_plugin: ^1.3.2
   flutter_native_splash: ^2.2.18
+  flutter_map_tile_caching: ^7.0.0-dev.2
 
 
 
