--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: any
   provider: any
-  flutter_map: 3.0.0
+  flutter_map: ^3.0.0
   wakelock: ^0.6.1+1
   http: any
   intl: any
@@ -52,7 +52,7 @@ dependencies:
   path_provider: ^2.0.9
   flutter_svg: ^1.0.3
   geolocator: ^9.0.1
-  flutter_local_notifications: ^12.0.4
+  flutter_local_notifications: ^13.0.0
   focus_detector: ^2.0.1
   file_picker: ^5.2.2
   xml: ^6.1.0
@@ -79,12 +79,14 @@ dependencies:
   flutter_map_dragmarker: any
   flutter_colorpicker: ^1.0.3
   screenshot: ^1.3.0
-  fl_chart: ^0.61.0
+  fl_chart: ^0.62.0
   datadog_flutter_plugin: ^1.3.2
   flutter_native_splash: ^2.2.18
   flutter_map_tile_caching: ^7.0.0-dev.2
 
-
+dependency_overrides:
+  isar: 3.0.6-dev.0
+  isar_flutter_libs: 3.0.6-dev.0
 
 dev_dependencies:
   flutter_test:
