--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.3.1+73
+version: 2.3.3+74
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -82,7 +82,7 @@ dependencies:
   fl_chart: ^0.62.0
   datadog_flutter_plugin: ^1.3.2
   flutter_native_splash: ^2.2.18
-  flutter_map_tile_caching: ^7.0.0-dev.2
+  flutter_map_tile_caching: ^7.2.0
 
 dependency_overrides:
   isar: 3.0.6-dev.0
