--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,13 +46,13 @@ dependencies:
   custom_image_crop: any
   qr_code_scanner: ^1.0.0
   qr_flutter: ^4.0.0
-  share_plus: ^6.3.0
+  share_plus: ^6.0.0
   web_socket_channel: ^2.1.0
   flutter_image_compress: ^1.1.0
   path_provider: ^2.0.9
   flutter_svg: ^1.0.3
   geolocator: ^9.0.1
-  flutter_local_notifications: ^13.0.0
+  flutter_local_notifications: ^12.0.0
   focus_detector: ^2.0.1
   file_picker: ^5.2.2
   xml: ^6.1.0
@@ -82,11 +82,14 @@ dependencies:
   fl_chart: ^0.62.0
   datadog_flutter_plugin: ^1.3.2
   flutter_native_splash: ^2.2.18
-  flutter_map_tile_caching: ^7.2.0
+  flutter_map_tile_caching:
+    git:
+      url: git@github.com:JaffaKetchup/flutter_map_tile_caching.git
+      ref: v6-backporting
 
-dependency_overrides:
-  isar: 3.0.6-dev.0
-  isar_flutter_libs: 3.0.6-dev.0
+# dependency_overrides:
+#   isar: 3.0.6-dev.0
+#   isar_flutter_libs: 3.0.6-dev.0
 
 dev_dependencies:
   flutter_test:
