--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.4.1+89
+version: 2.5.0+90
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,61 +35,55 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: any
   provider: any
-  flutter_map: ^3.0.0
+  flutter_map: ^4.0.0
   wakelock: ^0.6.1+1
   http: any
   intl: any
-  flutter_map_line_editor: ^4.0.2
+  flutter_map_line_editor: ^5.0.0
   shared_preferences: ^2.0.13
   fullscreen: ^1.0.3
-  image_picker: ^0.8.4+9
+  image_picker: ^1.0.4
   custom_image_crop: any
   qr_code_scanner: ^1.0.0
   qr_flutter: ^4.0.0
   share_plus: ^6.0.0
   web_socket_channel: ^2.1.0
-  flutter_image_compress: ^1.1.0
+  flutter_image_compress: ^2.0.4
   path_provider: ^2.0.9
   flutter_svg: ^1.0.3
-  geolocator: ^9.0.1
-  flutter_local_notifications: ^12.0.0
+  geolocator: ^10.0.1
+  flutter_local_notifications: ^15.1.1
   focus_detector: ^2.0.1
   file_picker: ^5.2.2
   xml: ^6.1.0
-  permission_handler: ^10.0.0
+  permission_handler: ^11.0.0
   flutter_tts: ^3.6.3
   flutter_barometer:
     git:
       url: git@github.com:eidolonFIRE/flutter_barometer.git
   package_info_plus: ^3.0.2
-  flutter_slidable: ^2.0.0
+  flutter_slidable: ^3.0.0
   network_info_plus: ^3.0.1
   url_launcher: ^6.1.2
   email_validator: ^2.0.1
   crypto: ^3.0.2
-  usb_serial: ^0.4.0
+  usb_serial: ^0.5.1
   latlong2: ^0.8.1
   collection: ^1.16.0
   better_open_file: any
   dart_numerics: ^0.0.6
-  fuzzywuzzy: ^0.2.0
+  fuzzywuzzy: ^1.1.2
   bisection: ^0.4.3+1
   positioned_tap_detector_2: ^1.0.4
-  flutter_speed_dial: ^6.2.0
+  flutter_speed_dial: ^7.0.0
   flutter_map_dragmarker: any
   flutter_colorpicker: ^1.0.3
-  screenshot: ^1.3.0
-  fl_chart: ^0.62.0
+  screenshot: ^2.0.0
+  fl_chart: ^0.63.0
   datadog_flutter_plugin: ^1.3.2
   flutter_native_splash: ^2.2.18
-  flutter_map_tile_caching:
-    git:
-      url: git@github.com:JaffaKetchup/flutter_map_tile_caching.git
-      ref: v6-backporting
+  flutter_map_tile_caching: ^8.0.1
 
-# dependency_overrides:
-#   isar: 3.0.6-dev.0
-#   isar_flutter_libs: 3.0.6-dev.0
 
 dev_dependencies:
   flutter_test:
@@ -102,7 +96,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.1
-  patrol: ^1.0.2
+  patrol: ^2.2.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -150,3 +144,11 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
+patrol:
+  app_name: xcNav
+  android:
+    package_name: com.xcnav
+  ios:
+    bundle_id: com.xcnav
