--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-platform :ios, '15.0'
+platform :ios, '17.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -38,65 +38,67 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
 
-
-    # Start of the permission_handler configuration
     target.build_configurations.each do |config|
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
-
-      # You can enable the permissions needed here. For example to enable camera
-      # permission, just remove the `#` character in front so it looks like this:
-      #
-      # ## dart: PermissionGroup.camera
-      # 'PERMISSION_CAMERA=1'
-      #
-      #  Preprocessor definitions can be found in: https://github.com/Baseflow/flutter-permission-handler/blob/master/permission_handler_apple/ios/Classes/PermissionHandlerEnums.h
+      # You can remove unused permissions here
+      # for more information: https://github.com/BaseflowIT/flutter-permission-handler/blob/master/permission_handler/ios/Classes/PermissionHandlerEnums.h
+      # e.g. when you don't need camera permission, just add 'PERMISSION_CAMERA=0'
       config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
         '$(inherited)',
 
         ## dart: PermissionGroup.calendar
-        # 'PERMISSION_EVENTS=1',
+        'PERMISSION_EVENTS=0',
+        
+        ## dart: PermissionGroup.calendarFullAccess
+        'PERMISSION_EVENTS_FULL_ACCESS=0',
 
         ## dart: PermissionGroup.reminders
-        # 'PERMISSION_REMINDERS=1',
+        'PERMISSION_REMINDERS=0',
 
         ## dart: PermissionGroup.contacts
-        # 'PERMISSION_CONTACTS=1',
+        'PERMISSION_CONTACTS=0',
 
         ## dart: PermissionGroup.camera
         'PERMISSION_CAMERA=1',
 
         ## dart: PermissionGroup.microphone
-        # 'PERMISSION_MICROPHONE=1',
+        'PERMISSION_MICROPHONE=0',
 
         ## dart: PermissionGroup.speech
-        # 'PERMISSION_SPEECH_RECOGNIZER=1',
+        'PERMISSION_SPEECH_RECOGNIZER=0',
 
         ## dart: PermissionGroup.photos
         'PERMISSION_PHOTOS=1',
 
+        ## The 'PERMISSION_LOCATION' macro enables the `locationWhenInUse` and `locationAlways` permission. If
+        ## the application only requires `locationWhenInUse`, only specify the `PERMISSION_LOCATION_WHENINUSE`
+        ## macro.
+        ##
         ## dart: [PermissionGroup.location, PermissionGroup.locationAlways, PermissionGroup.locationWhenInUse]
-        'PERMISSION_LOCATION=2',
+        # 'PERMISSION_LOCATION=1',
+        'PERMISSION_LOCATION_WHENINUSE=1',
 
         ## dart: PermissionGroup.notification
-        # 'PERMISSION_NOTIFICATIONS=1',
+        'PERMISSION_NOTIFICATIONS=0',
 
         ## dart: PermissionGroup.mediaLibrary
-        # 'PERMISSION_MEDIA_LIBRARY=1',
+        'PERMISSION_MEDIA_LIBRARY=0',
 
         ## dart: PermissionGroup.sensors
-        # 'PERMISSION_SENSORS=1',   
+        'PERMISSION_SENSORS=0',
 
         ## dart: PermissionGroup.bluetooth
-        # 'PERMISSION_BLUETOOTH=1',
+        'PERMISSION_BLUETOOTH=0',
 
         ## dart: PermissionGroup.appTrackingTransparency
-        # 'PERMISSION_APP_TRACKING_TRANSPARENCY=1',
+        'PERMISSION_APP_TRACKING_TRANSPARENCY=0',
 
         ## dart: PermissionGroup.criticalAlerts
-        # 'PERMISSION_CRITICAL_ALERTS=1'
+        'PERMISSION_CRITICAL_ALERTS=0',
+
+        ## dart: PermissionGroup.criticalAlerts
+        'PERMISSION_ASSISTANT=0',
       ]
 
-    end 
-    # End of the permission_handler configuration
+    end
   end
 end
