--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -38,6 +38,8 @@
 			<string>fetch</string>
 			<string>location</string>
 		</array>
+		<key>NSMotionUsageDescription</key>
+		<string>This app requires access to the barometer to provide altitude information.</string>
 		<key>UILaunchStoryboardName</key>
 		<string>LaunchScreen</string>
 		<key>UIMainStoryboardFile</key>
