10hz sample saving, not in geo

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.8.2+148
+version: 2.8.3+150
 
 environment:
   sdk: ">=3.2.0 <4.0.0"
@@ -84,6 +84,7 @@ dependencies:
   flutter_blue_plus: ^1.31.7
   webview_flutter: ^4.8.0
   sensors_plus: ^6.0.1
+  smooth_page_indicator: ^1.2.0+3
 
 
 # dependency_overrides:
