--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,7 +99,8 @@ dev_dependencies:
     sdk: flutter
   mockito: ^5.3.0
   mocktail_image_network : any
-
+  flutter_local_notifications_platform_interface: any
+  plugin_platform_interface: any
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
