--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,10 +30,12 @@ if (keystorePropertiesFile.exists()) {
 
 android {
     namespace "com.xcnav"
-    compileSdk flutter.compileSdkVersion
-    ndkVersion flutter.ndkVersion
+    ndkVersion "28.0.13004108"
 
     compileOptions {
+        // For local_notifications
+        coreLibraryDesugaringEnabled true
+
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -53,6 +55,9 @@ android {
         compileSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+        // For local_notifications
+        multiDexEnabled true
 
         // testInstrumentationRunner "pl.leancode.patrol.PatrolJUnitRunner"
         // testInstrumentationRunnerArguments clearPackageData: "true"
@@ -81,4 +86,7 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    // For local_notifications
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+}
