--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: none # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.9.9+185
+version: 2.9.10+186
 
 environment:
   sdk: '>=3.2.0 <4.0.0'
@@ -89,6 +89,7 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   syncfusion_flutter_sliders: ^28.2.6
   wheel_picker: ^0.2.1
+  easy_localization: ^3.0.7+1
 
 dev_dependencies:
   flutter_test:
@@ -116,6 +117,7 @@ flutter:
     - assets/images/
     - assets/external/
     - assets/airports.json
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
