--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,12 +36,12 @@ android {
         // For local_notifications
         coreLibraryDesugaringEnabled true
 
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     sourceSets {
@@ -50,9 +50,9 @@ android {
 
     defaultConfig {
         applicationId "com.xcnav"
-        minSdkVersion 33
-        targetSdkVersion 35
-        compileSdkVersion 35
+        minSdkVersion 34
+        targetSdkVersion 36
+        compileSdkVersion 36
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
 
@@ -88,5 +88,5 @@ flutter {
 
 dependencies {
     // For local_notifications
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.1.4")
 }
